--- a/site/index.qmd
+++ b/site/index.qmd
@@ -4,6 +4,6 @@ Haec pagina exercitia ad usum discipulorum continet quae facienda sunt post sing
 
 🔗 Situs interretialis: <https://locusclassicus.github.io/caesar/> \
 \
-🖨️ Exercitia ad imprimendum parata [hic](http://antibarbari.ru) sunt.
+🖨️ Exercitia ad imprimendum parata: <http://antibarbari.ru/2025/09/29/de-bello-gallico-i-1-18-exercitia/> sunt.
 
 ![](team.jpg)
